--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, user-scale=1">
 <title>Mi Portafolio</title>
 <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
 <link rel="stylesheet" href="js/jquery-ui.css">
@@ -29,12 +30,11 @@
 					<li><a href="#acerca_mi" class="btn_1">Acerca de Mi</a></li>
 					<li class="sub-menu"><a href="#habilidades" class="btn_2">Mis Habilidades<span class="iconoX"></span></a>
 						<ul>
-							<li><a href="#habilidades">HTML</a></li>
-							<li><a href="#habilidades">CSS</a></li>
-							<li><a href="#habilidades">JavaScript</a></li>
-							<li><a href="#habilidades">jQuery</a></li>
-							<li><a href="#habilidades">Responsive Design</a></li>
-							<li><a href="#habilidades">Bootstrap</a></li>
+							<li><a href="#habilidades">Desarrollo Web</a></li>
+							<li><a href="#habilidades">Desarrollo JavaScript</a></li>
+							<li><a href="#habilidades">Aplicaciones Hibridas</a></li>
+							<li><a href="#habilidades">Plataformas E-commerce(CMS)</a></li>
+							<li><a href="#habilidades">Responsive Web Design</a></li>
 						</ul>
 					</li>
 					<li class="sub-menu"><a href="#conocimientos" class="btn_3">Otros Conocimientos<span class="iconoX"></span></a>
@@ -66,7 +66,7 @@
 				<div class="texto-cont">
 					<h3>Desarrollador Web Junior</h3>
 					<br>
-					<p>Estudiante en Desarrollador Web y Desarrollador de JavaScript Online, especializándome en Front End y Back End.<br> Egresado en Computación e Informática, con ganas de ejercer mis conocimientos. Amante de la tecnología y en tener mayores conocimientos, siempre aprendiendo.</p>
+					<p>Desarrollador Web Jr. y Desarrollador de JavaScript. Especializándome para Front End y Back End.<br> Egresado en Computación e Informática, con los conocimientos basicos de computacion y todo lo relacionado, con amplias ganas de ejercer mis conocimientos y desarrollar nuevas soluciones presentadas.<br>Amante de la tecnología y en busqueda de mayores conocimientos en el ambito informatico y tecnologico, estudiando aun para la completa implementacion de mis conocimientos.</p>
 				</div>
 			</div>
 		</div>
