--- a/index.html
+++ b/index.html
@@ -76,46 +76,112 @@
 			<h1>Mis Habilidades</h1>
 			<div id="misTabs">
 				<ul>
-					<li><a href="#html">HTML</a></li>
-					<li><a href="#css">CSS</a></li>
-					<li><a href="#js">JavaScript</a></li>
-					<li><a href="#jquery">jQuery</a></li>
-					<li><a href="#responsive">Responsive Desing</a></li>
-					<li><a href="#bootstrap">Bootstrap</a></li>
+					<li><a href="#dWeb">Desarrollador Web</a></li>
+					<li><a href="#dJS">Desarrollador de JavaScript</a></li>
+					<li><a href="#aHibridas">Aplicaciones Hibridas</a></li>
+					<li><a href="#ecommerce">Plataformas E-commerce y Contenido</a></li>
+					<li><a href="#responsive">Responsive Design</a></li>
 				</ul>
-				<div id="html">
-					<p>Desarrollo de paginas web con HTML5, con los conocimientos necesarios para el desarrollo Web.<br>Formacion Constante e investigacion continua para el crecimiento personal.</p>
-					<div class="circulo"><span></span><h1>85%</h1></div>
-					<br>
-					<h3>HTML</h3>
+				<div id="dWeb">
+					<div class="titulo_habilidades">
+						<div class="circulo"><h2>85 %</h2></div>
+						<h3>Desarrollador Web</h3>
+					</div>
+					<div class="contenido_insignia">
+						<div class="insignia">
+							<h5>Fundamentos de HTML</h5><hr>
+							<img src="imagenes/insignias/desarrollador-web/Fundamentos_de_HTML.png" alt="">
+						</div>
+						<div class="insignia">
+							<h5>CSS y Diseño Web Responsive</h5><hr>
+							<img src="imagenes/insignias/desarrollador-web/CSS_y_Diseño_Web_Responsive.png" alt="">
+						</div>
+						<div class="insignia">
+							<h5>Frameworks y Librerias CSS</h5><hr>
+							<img src="imagenes/insignias/desarrollador-web/Frameworks_y_Librerías_CSS.png" alt="">
+						</div>
+						<div class="insignia">
+							<h5>Interactividad con JavaScript</h5><hr>
+							<img src="imagenes/insignias/desarrollador-web/Interactividad_con_JavaScript.png" alt="">
+						</div>
+					</div>
 				</div>
-				<div id="css">
-					<p>Con los conocimientos basicos, intermedio y necesarios para la animacion, transformacion, fondos, entre otros.<br>CSS3 es una ayuda para mejorar la Vista de las paginas realizadas.</p><br>
-					<div class="circulo"><span></span><h1>85%</h1></div>
-					<br>
-					<h3>CSS</h3>
+				<div id="dJS">
+					<div class="titulo_habilidades">
+						<div class="circulo"><h2>80 %</h2></div>
+						<h3>Desarrollador de JavaScript</h3>
+					</div>
+					<div class="contenido_insignia">
+						<div class="insignia">
+							<h5>JavaScript lo Esencial</h5><hr>
+							<img src="imagenes/insignias/desarrollador-web/JavaScript_Lo_Esencial.png" alt="">
+						</div>
+						<div class="insignia">
+							<h5>El DOM y el BOM</h5><hr>
+							<img src="imagenes/insignias/desarrollador-web/El_DOM_y_el_BOM.png" alt="">
+						</div>
+						<div class="insignia">
+							<h5>jQuery</h5><hr>
+							<img src="imagenes/insignias/desarrollador-web/jQuery.png" alt="">
+						</div>
+						<div class="insignia">
+							<h5>jQuery UI</h5><hr>
+							<img src="imagenes/insignias/desarrollador-web/jQuery_UI.png" alt="">
+						</div>
+						<div class="insignia">
+							<h5>jQuery Mobile</h5><hr>
+							<img src="imagenes/insignias/desarrollador-web/jQuery_Mobile.png" alt="">
+						</div>
+					</div>
 				</div>
-				<div id="js">
-					<p>Con conocimientos en desarrollos con JavaScript, el uso de objetos, uso de algoritmos, animaciones o eventos de mouse, teclado y touch.<br>Un lenguaje necesario que lo aplico para todos mis proyectos web.</p><br>
-					<div class="circulo"><span class="art1"></span><h1>80%</h1></div>
-					<br>
-					<h3>JavaScript</h3>
+				<div id="aHibridas">
+					<div class="titulo_habilidades">
+						<div class="circulo"><h2>60 %</h2></div>
+						<h3>Aplicaciones Hibridas</h3>
+					</div>
+					<div class="contenido_insignia">
+						<div class="insignia">
+							<h5>Fundamentos de HTML</h5><hr>
+							<img src="imagenes/insignias/desarrollador-web/Fundamentos_de_HTML.png" alt="">
+						</div>
+						<div class="insignia">
+							<h5>CSS y Diseño Web Responsive</h5><hr>
+							<img src="imagenes/insignias/desarrollador-web/CSS_y_Diseño_Web_Responsive.png" alt="">
+						</div>
+					</div>
 				</div>
-				<div id="jquery">
-					<p>Una herramienta necesaria para la facilidad de uso con el lenguaje de JavaScript<br>Los desarrollos web que realice estan programados con jQuery y jQuery-ui.<br>Con conocimientos de jQuery-Mobile para la creacion simple de aplicaciones entre otras.</p><br>
-					<div class="circulo"><span class="art2"></span><h1>82%</h1></div>
-					<h3>jQuery</h3>
+				<div id="ecommerce">
+					<div class="titulo_habilidades">
+						<div class="circulo"><h2>60 %</h2></div>
+						<h3>E-commerce(CMS)</h3>
+					</div>
+					<div class="contenido_insignia">
+						<div class="insignia">
+							<h5>Fundamentos de HTML</h5><hr>
+							<img src="imagenes/insignias/desarrollador-web/Fundamentos_de_HTML.png" alt="">
+						</div>
+						<div class="insignia">
+							<h5>CSS y Diseño Web Responsive</h5><hr>
+							<img src="imagenes/insignias/desarrollador-web/CSS_y_Diseño_Web_Responsive.png" alt="">
+						</div>
+					</div>
 				</div>
 				<div id="responsive">
-					<p>Desarrollando las paginas web y se visualicen bien en todo dispositivos moviles, tablets y escritorio.<br>Habitualmente desarrollo las paginas Responsive.</p>
-					<div class="circulo"><span class="art3"></span><h1>90%</h1></div>
-					<h3>Responsive Desing</h3>
-				</div>
-				<div id="bootstrap">
-					<p>Una buena herramienta para la creacion de las paginas web gracias a sus regillas de filas y columnas.<br>Con los conocimientos necesarios para la modelacion o estructura de la pagina web Responsive.</p><br>
-					<div class="circulo"><span></span><h1>85%</h1></div>
-					<br>
-					<h3>Bootstrap</h3>
+					<div class="titulo_habilidades">
+						<div class="circulo"><h2>90 %</h2></div>
+						<h3>Responsive Design</h3>
+					</div>
+					<div class="contenido_insignia">
+						<div class="insignia">
+							<h5>Fundamentos de HTML</h5><hr>
+							<img src="imagenes/insignias/desarrollador-web/Fundamentos_de_HTML.png" alt="">
+						</div>
+						<div class="insignia">
+							<h5>CSS y Diseño Web Responsive</h5><hr>
+							<img src="imagenes/insignias/desarrollador-web/CSS_y_Diseño_Web_Responsive.png" alt="">
+						</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
