--- a/index.html
+++ b/index.html
@@ -337,8 +337,8 @@
 		var loader1 = $("#loader");
 		setTimeout(function (){
 			loader1.addClass('cargado');
-		},1500);
-		
+		},1500).css("display","none");
+			 
 		//-- Menus --
 		$(".sub-menu").click(function(){
 			$(this).children("ul").slideToggle();
