--- a/index.html
+++ b/index.html
@@ -53,8 +53,15 @@
 	<div id="contenido">
 		
 		<div id="inicio">
-			<div id="slider">	
+			<div id="slider">
+				<div class="circ_ad1">HTML</div>
+				<div class="circ_ad2">CSS</div>
+				<div class="circ_ad3">JS</div>
+				<div class="circ_ad4">Bootstrap</div>
+				<div class="circ_ad5">PS</div>
+				<div class="circ_ad6">jQuery</div>
 			</div>
+			
 		</div>
 		
 		<div id="acerca_mi">
