implementacion de cv

--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
 				<div class="log-cont"><img src="imagenes/caricatura-artur.jpg" alt=""></div>
 				<p>Juan Arturo Diaz Cahuana <hr> Desarrollador Web Jr.</p>
 			<br>
-				<a href="documentos/" class="cv">Curriculum Vitae PDF</a>
+				<a href="documentos/curriculum_2019.pdf" class="cv">Curriculum Vitae PDF</a>
 			</div>
 			<div class="contactos">
 				
