ingreso de pagina casas

--- a/index.html
+++ b/index.html
@@ -361,6 +361,15 @@
 						<p>Una aplicación realizado con JavaScript y jQuery Mobile.<br>
 						Registro guardado en un Array</p>
 					</div>
+					<div class="proy_item">
+						<img src="imagenes/pagina/pagina-casa1.jpg" alt="proy"/>
+						<div class="iconoN"><h4>Aplicación Registro Hoteles</h4></div>
+						<a href="https://arturdiaz.github.io/pagina_casas/" target="_blank">
+							<button>Ver</button>
+						</a>
+						<p>Realizado con FlexBox Grid, página demo de una venta de todo tipo de casas.<br>
+						Una página moderna con animaciones detalladas</p>
+					</div>
 					
 				</div>
 			</div>
